--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AliucordManager"
+        android:theme="@style/Theme.AliucordManager.SplashScreen"
         tools:ignore="AllowBackup">
         <provider
             android:name="androidx.core.content.FileProvider"
