--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
   <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
 
   <uses-permission
       android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
@@ -33,6 +34,7 @@
       android:supportsRtl="true"
       android:theme="@style/Theme.AliucordManager.SplashScreen"
       tools:ignore="AllowBackup">
+    <service android:name=".installer.service.InstallService" />
     <provider
         android:name="androidx.core.content.FileProvider"
         android:authorities="${applicationId}.provider"
