Fix splash screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,6 @@
       android:label="@string/app_name"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
-      android:theme="@style/Theme.AliucordManager.SplashScreen"
       tools:ignore="AllowBackup">
     <service android:name=".installer.service.InstallService" />
     <provider
@@ -47,7 +46,8 @@
 
     <activity
         android:name=".MainActivity"
-        android:exported="true">
+        android:exported="true"
+        android:theme="@style/Theme.AliucordManager.SplashScreen">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
