--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
       android:roundIcon="@mipmap/ic_launcher_round"
+      android:requestLegacyExternalStorage="true"
       android:supportsRtl="true"
       tools:ignore="AllowBackup">
     <service android:name=".installer.service.InstallService" />
