--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,7 +29,7 @@ accompanist-systemUiController = { module = "com.google.accompanist:accompanist-
 androidx-activity = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
 androidx-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "androidx-splashscreen" }
-androidx-paging = "androidx.paging:paging-compose:3.3.0-alpha02" # TODO: remove paging
+androidx-paging = "androidx.paging:paging-compose:1.0.0-alpha17" # TODO: remove paging
 
 # Compose
 compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose" }
@@ -37,6 +37,7 @@ compose-foundation = { module = "androidx.compose.foundation:foundation", versio
 compose-animations = { module = "androidx.compose.animation:animation-graphics", version.ref = "compose" }
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
+compose-icons = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" }
 compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
 
 # Compose debug tooling
@@ -81,6 +82,7 @@ compose = [
     "compose-runtime",
     "compose-ui",
     "compose-foundation",
+    "compose-icons",
     "compose-material3",
     "compose-animations",
 ]
