--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,6 @@ max_line_length = 150
 trim_trailing_whitespace = true
 insert_final_newline = true
 indent_size = 4
-# these are Intellij specific so they will only work in Android Studio / IDEA
 ij_continuation_indent_size = 4
 
 [*.java]
@@ -33,6 +32,13 @@ ij_kotlin_name_count_to_use_star_import_for_members = 3
 ij_kotlin_keep_first_column_comment = false
 ij_kotlin_line_comment_add_space = true
 ij_kotlin_line_comment_at_first_column = false
+ij_kotlin_allow_trailing_comma = true
 
 [*.{xml,yml}]
 indent_size = 2
+
+[*.properties]
+ij_properties_align_group_field_declarations = false
+ij_properties_keep_blank_lines = true
+ij_properties_key_value_delimiter = equals
+ij_properties_spaces_around_key_value_delimiter = false
