--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ coil = "2.5.0"
 compose = "1.5.4"
 compose-compiler = "1.5.8"
 compose-tracing = "1.0.0-beta01"
-compose-material3 = "1.2.0-beta02"
+compose-material3 = "1.2.0-rc01"
 koin = "3.5.3"
 kotlin = "1.9.22"
 kotlinx-immutable = "0.3.7"
