--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ agp = "8.2.1"
 androidx-activity = "1.8.2"
 androidx-core = "1.12.0"
 androidx-splashscreen = "1.0.1"
+androidx-lifecycle = "2.7.0"
 apksig = "7.4.2"
 axml = "1.0.1"
 bouncycastle = "1.70"
@@ -27,6 +28,7 @@ accompanist-systemUiController = { module = "com.google.accompanist:accompanist-
 
 # AndroidX
 androidx-activity = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
+androidx-lifecycle = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
 androidx-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "androidx-splashscreen" }
 
@@ -77,6 +79,7 @@ accompanist = [
 androidx = [
     "androidx-core",
     "androidx-activity",
+    "androidx-lifecycle",
     "androidx-splashscreen",
 ]
 compose = [
