--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,10 @@
       android:label="@string/app_name"
       android:requestLegacyExternalStorage="true"
       android:roundIcon="@mipmap/ic_launcher_round"
-      android:supportsRtl="true"
-      tools:ignore="AllowBackup">
-    <service android:name=".installer.service.InstallService" />
+      android:supportsRtl="true">
+
+    <receiver android:name=".installers.pm.PMIntentReceiver" />
+
     <provider
         android:name="androidx.core.content.FileProvider"
         android:authorities="${applicationId}.provider"
