--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ androidx-activity = "1.8.2"
 androidx-core = "1.12.0"
 androidx-splashscreen = "1.0.1"
 androidx-lifecycle = "2.7.0"
+apkresources = "31.4.0-alpha09"
 apksig = "7.4.2"
 axml = "1.0.1"
 bouncycastle = "1.70"
@@ -65,6 +66,7 @@ voyager-transitions = { module = "cafe.adriel.voyager:voyager-transitions", vers
 voyager-koin = { module = "cafe.adriel.voyager:voyager-koin", version.ref = "voyager" }
 
 # Other
+apkresources = { module = "com.android.tools.apkparser:binary-resources", version.ref = "apkresources" }
 apksig = { module = "com.android.tools.build:apksig", version.ref = "apksig" }
 axml = { module = "com.aliucord:axml", version.ref = "axml" }
 bouncycastle = { module = "org.bouncycastle:bcpkix-jdk15on", version.ref = "bouncycastle" }
