--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,9 @@
         android:name=".MainActivity"
         android:exported="true"
         android:launchMode="singleTask"
-        android:theme="@style/Theme.AliucordManager.SplashScreen">
+        android:screenOrientation="portrait"
+        android:theme="@style/Theme.AliucordManager.SplashScreen"
+        tools:ignore="DiscouragedApi,LockedOrientationActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
