--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
       android:name=".ManagerApplication"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
+      android:largeHeap="true"
       android:requestLegacyExternalStorage="true"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true">
