feat(PMInstaller): wait for uninstalls & fix PM session lifecycle bugs
- Support waiting for package uninstallation results
- Make DowngradeCheckStep wait for uninstall rather than erroring
- Relaunch PackageInstaller user action intents infinitely until result received (Workaround of bug on some ROMs where dismissing the PI dialog by clicking outside wouldn't invoke the callback with STATUS_FAILURE_ABORTED)
- Make PMIntentReceiver & PMResultReceiver non-exported to keep intents from leaking to other apps
- Handle uncaught exceptions thrown in the aforementioned receivers by returning the result back to the app (or logging) to prevent crashes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true">
 
-    <receiver android:name=".installers.pm.PMIntentReceiver" />
+    <receiver
+        android:name=".installers.pm.PMIntentReceiver"
+        android:exported="false" />
 
     <provider
         android:name="androidx.core.content.FileProvider"
