--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,11 +9,14 @@ on:
       - '*'
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: set up JDK 17
         uses: actions/setup-java@v2
@@ -23,11 +26,12 @@ jobs:
           cache: 'gradle'
 
       - name: Build project with Gradle
-        run: chmod +x ./gradlew && ./gradlew app:assembleDebug
+        run: chmod +x ./gradlew && ./gradlew :app:assembleDebug
 
       - name: Upload apk as artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: app
+          if-no-files-found: error
           path: |
             app/build/outputs/apk/debug/app-debug.apk
