feat: update dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-*.iml
-.gradle
-/local.properties
 .idea
-.DS_Store
-build
-release
+.gradle
+.kotlin
+
+/**/build/
+/local.properties
 /captures
-.externalNativeBuild
-.cxx
-local.properties
+
+.DS_Store
 *.log
