--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,34 +1,33 @@
 [versions]
-accompanist = "0.32.0"
-agp = "8.2.2"
-androidx-activity = "1.8.2"
-androidx-core = "1.12.0"
+accompanist = "0.37.0"
+agp = "8.7.3" # 8.8 breaks proguard
+androidx-activity = "1.9.3"
+androidx-core = "1.15.0"
 androidx-splashscreen = "1.0.1"
-androidx-lifecycle = "2.7.0"
-apksig = "7.4.2"
+androidx-lifecycle = "2.8.7"
+apksig = "8.8.0"
 axml = "1.0.1"
 binary-resources = "2.0.0"
 bouncycastle = "1.70"
-coil = "2.5.0"
-compose = "1.5.4"
-compose-compiler = "1.5.8"
-compose-tracing = "1.0.0-beta01"
-compose-material3 = "1.2.0-rc01"
+coil = "3.0.4"
+compose = "1.7.6"
+compose-tracing = "1.7.6"
+compose-material3 = "1.3.1"
 #diff = "4.12"
-koin = "3.5.3"
-kotlin = "1.9.22"
-kotlinx-immutable = "0.3.7"
-kotlinx-serialization = "1.5.0"
-ktor = "2.3.7"
-microg = "0.3.2.240913"
-smali = "3.0.7"
-voyager = "1.0.0"
+koin = "4.0.1"
+kotlin = "2.1.0"
+kotlinx-immutable = "0.3.8"
+kotlinx-serialization = "1.8.0"
+ktor = "3.0.3"
+microg = "0.3.6.244735"
+smali = "3.0.9"
+voyager = "1.0.1"
 zip = "2.1.1"
 
 [libraries]
 # Accompanist
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
-accompanist-systemUiController = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist" }
+accompanist-systemUiController = { module = "com.google.accompanist:accompanist-systemuicontroller", version = "0.36.0" }
 
 # AndroidX
 androidx-activity = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
@@ -36,6 +35,10 @@ androidx-lifecycle = { module = "androidx.lifecycle:lifecycle-runtime-compose", 
 androidx-lifecycle-process = { module = "androidx.lifecycle:lifecycle-process", version.ref = "androidx-lifecycle" }
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
 androidx-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "androidx-splashscreen" }
+
+# Coil (image library)
+coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
+coil-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coil" }
 
 # Compose
 compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose" }
@@ -74,7 +77,6 @@ apksig = { module = "com.android.tools.build:apksig", version.ref = "apksig" }
 axml = { module = "com.aliucord:axml", version.ref = "axml" }
 binaryResources = { module = "com.aliucord:binary-resources", version.ref = "binary-resources" }
 bouncycastle = { module = "org.bouncycastle:bcpkix-jdk15on", version.ref = "bouncycastle" }
-coil = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 #diff = { module = "io.github.java-diff-utils:java-diff-utils", version.ref = "diff" }
 diff = "com.github.Aliucord:java-diff-utils:a0002d1d40" # TODO: remove when https://github.com/java-diff-utils/java-diff-utils/pull/198 is merged
 microg = { module = "org.microg.gms:play-services-safetynet", version.ref = "microg" }
@@ -93,6 +95,10 @@ androidx = [
     "androidx-lifecycle",
     "androidx-lifecycle-process",
     "androidx-splashscreen",
+]
+coil = [
+    "coil-compose",
+    "coil-okhttp",
 ]
 compose = [
     "compose-runtime",
@@ -120,6 +126,7 @@ voyager = [
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
