--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -23,7 +23,7 @@ jobs:
           push_translations: true
           create_pull_request: false
           localization_branch_name: l10n
-          commit_message: 'chore(i18n): sync translations'
+          commit_message: 'chore(l10n): sync translations'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_ID }}
@@ -36,3 +36,4 @@ jobs:
           git add *
           git merge l10n
           git push
+          git push origin --delete l10n
