--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
       android:largeHeap="true"
       android:requestLegacyExternalStorage="true"
       android:roundIcon="@mipmap/ic_launcher_round"
-      android:supportsRtl="true">
+      android:supportsRtl="true"
+      android:theme="@style/Theme.AppCompat.NoActionBar">
 
     <receiver
         android:name=".installers.pm.PMIntentReceiver"
