--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ coil = "3.1.0"
 compose = "1.7.7"
 compose-tracing = "1.7.7"
 compose-material3 = "1.3.1"
+compose-pipette = "1.0.0-beta01"
 #diff = "4.12"
 koin = "4.0.2"
 kotlin = "2.1.10"
@@ -53,6 +54,10 @@ compose-material3 = { module = "androidx.compose.material3:material3", version.r
 compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 compose-runtime-tracing = { module = "androidx.compose.runtime:runtime-tracing", version.ref = "compose-tracing" }
 
+# Extra compose libs
+compose-pipette = { module = "dev.zt64.compose.pipette:compose-pipette", version.ref = "compose-pipette" }
+compose-shimmer = { module = "com.valentinilk.shimmer:compose-shimmer", version.ref = "shimmer" }
+
 # Koin
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
@@ -86,7 +91,6 @@ zip = { module = "io.github.diamondminer88:zip-android", version.ref = "zip" } #
 
 # Other
 microg = { module = "org.microg.gms:play-services-safetynet", version.ref = "microg" }
-compose-shimmer = { module = "com.valentinilk.shimmer:compose-shimmer", version.ref = "shimmer" }
 
 [bundles]
 accompanist = [
