--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # Android
 android.useAndroidX=true
 android.enableR8.fullMode=true
+android.javaCompile.suppressSourceTargetDeprecationWarning=true
 
 # Kotlin
 kotlin.code.style=official
