--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,30 +1,29 @@
 [versions]
-accompanist = "0.37.0"
-agp = "8.7.3" # 8.8 breaks proguard
-androidx-activity = "1.10.0"
-androidx-core = "1.15.0"
+accompanist = "0.37.3"
+agp = "8.10.0"
+androidx-activity = "1.10.1"
+androidx-core = "1.16.0"
 androidx-splashscreen = "1.0.1"
-androidx-lifecycle = "2.8.7"
-apksig = "8.8.0"
+androidx-lifecycle = "2.9.0"
+apksig = "8.10.0"
 axml = "1.0.1"
 binary-resources = "2.0.0"
 bouncycastle = "1.80"
-coil = "3.1.0"
-compose = "1.7.7"
-compose-tracing = "1.7.7"
-compose-material3 = "1.3.1"
-compose-pipette = "1.0.0-beta01"
+coil = "3.2.0"
+compose = "1.8.1"
+compose-material3 = "1.3.2"
+compose-pipette = "1.0.1"
 #diff = "4.12"
-koin = "4.0.2"
-kotlin = "2.1.10"
+koin = "4.0.4"
+kotlin = "2.1.21"
 kotlinx-datetime = "0.6.2"
-kotlinx-immutable = "0.3.8"
-kotlinx-serialization = "1.8.0"
-ktor = "3.0.3"
+kotlinx-immutable = "0.4.0"
+kotlinx-serialization = "1.8.1"
+ktor = "3.1.3"
 microg = "0.3.6.244735"
 shimmer = "1.3.2"
 smali = "3.0.9"
-voyager = "1.0.1"
+voyager = "1.1.0-beta03"
 zip = "2.2.0"
 
 [libraries]
@@ -52,8 +51,8 @@ compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = 
 compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
 
 # Compose debug tooling
+compose-runtime-tracing = { module = "androidx.compose.runtime:runtime-tracing", version.ref = "compose" }
 compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
-compose-runtime-tracing = { module = "androidx.compose.runtime:runtime-tracing", version.ref = "compose-tracing" }
 
 # Extra compose libs
 compose-pipette = { module = "dev.zt64.compose.pipette:compose-pipette", version.ref = "compose-pipette" }
@@ -86,7 +85,7 @@ axml = { module = "com.aliucord:axml", version.ref = "axml" }
 binaryResources = { module = "com.aliucord:binary-resources", version.ref = "binary-resources" }
 bouncycastle = { module = "org.bouncycastle:bcpkix-jdk18on", version.ref = "bouncycastle" }
 #diff = { module = "io.github.java-diff-utils:java-diff-utils", version.ref = "diff" }
-diff = "com.github.Aliucord:java-diff-utils:a0002d1d40" # TODO: remove when https://github.com/java-diff-utils/java-diff-utils/pull/198 is merged
+diff = "com.github.Aliucord:java-diff-utils:a0002d1d40" # TODO: remove when https://github.com/java-diff-utils/java-diff-utils/pull/198 is released
 smali = { module = "com.android.tools.smali:smali", version.ref = "smali" }
 baksmali = { module = "com.android.tools.smali:smali-baksmali", version.ref = "smali" }
 zip = { module = "io.github.diamondminer88:zip-android", version.ref = "zip" } # Only use the "aar" artifact
