--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,8 @@
-name: Build APK
+name: Build Debug
 
 on:
   push:
-    branches:
-      - '*'
   pull_request:
-    branches:
-      - '*'
   workflow_dispatch:
 
 permissions:
@@ -18,15 +14,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: set up JDK 17
-        uses: actions/setup-java@v2
+      - name: set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          java-version: 17
-          distribution: 'zulu'
-          cache: 'gradle'
+          java-version: 21
+          distribution: zulu
+          cache: "gradle"
 
       - name: Build project with Gradle
-        run: chmod +x ./gradlew && ./gradlew :app:assembleDebug
+        run: chmod +x ./gradlew && ./gradlew :app:assembleDebug --stacktrace
 
       - name: Upload apk as artifact
         uses: actions/upload-artifact@v4
