fix(build): allow detached git HEAD

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,5 +29,4 @@ jobs:
         with:
           name: app
           if-no-files-found: error
-          path: |
-            app/build/outputs/apk/debug/app-debug.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
