chore: update dependencies
Also fixes a Ktor caching error

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,27 +1,27 @@
 [versions]
 accompanist = "0.37.3"
-agp = "8.10.0"
+agp = "8.10.1"
 androidx-activity = "1.10.1"
 androidx-core = "1.16.0"
 androidx-splashscreen = "1.0.1"
-androidx-lifecycle = "2.9.0"
-apksig = "8.10.0"
+androidx-lifecycle = "2.9.1"
+apksig = "8.10.1"
 axml = "1.0.1"
 binary-resources = "2.0.1"
-bouncycastle = "1.80"
+bouncycastle = "1.81"
 coil = "3.2.0"
-compose = "1.8.1"
+compose = "1.8.3"
 compose-material3 = "1.3.2"
 compose-pipette = "1.0.1"
 #diff = "4.12"
-koin = "4.0.4"
+koin = "4.1.0"
 kotlin = "2.1.21"
 kotlinx-datetime = "0.6.2"
 kotlinx-immutable = "0.4.0"
 kotlinx-serialization = "1.8.1"
-ktor = "3.1.3"
+ktor = "3.2.0-eap-1351"
 microg = "0.3.6.244735"
-shimmer = "1.3.2"
+shimmer = "1.3.3"
 smali = "3.0.9"
 voyager = "1.1.0-beta03"
 zip = "2.2.0"
