--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,14 @@
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-
-# Android
-android.useAndroidX=true
-android.enableR8.fullMode=true
-android.javaCompile.suppressSourceTargetDeprecationWarning=true
+# Gradle
+org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configuration-cache=true
 
 # Kotlin
 kotlin.code.style=official
+
+# Android
+android.useAndroidX=true
+android.nonTransitiveRClass=true
+android.enableR8.fullMode=true
+android.javaCompile.suppressSourceTargetDeprecationWarning=true
