--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,9 @@ jobs:
         with:
           java-version: 21
           distribution: zulu
-          cache: "gradle"
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
 
       - name: Build with Gradle
         env:
@@ -34,7 +36,7 @@ jobs:
           RELEASE: true
         run: |
           echo "${{ secrets.keystore }}" | base64 -d > release.keystore
-          chmod +x ./gradlew && ./gradlew :app:packageRelease --stacktrace
+          ./gradlew :app:packageRelease --stacktrace
           rm release.keystore
 
       - name: Upload artifacts
