--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,12 @@ jobs:
         with:
           java-version: 21
           distribution: zulu
-          cache: "gradle"
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
 
       - name: Build with Gradle
-        run: chmod +x ./gradlew && ./gradlew :app:assembleDebug :app:assembleStaging --stacktrace
+        run: ./gradlew :app:assembleDebug :app:assembleStaging --stacktrace
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
