--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,20 +8,24 @@
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-  <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
-  <uses-permission android:name="android.permission.REQUEST_DELETE_PACKAGES" />
   <uses-permission android:name="android.permission.UPDATE_PACKAGES_WITHOUT_USER_ACTION" />
   <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
-
+  <uses-permission android:name="android.permission.REQUEST_DELETE_PACKAGES" />
+  <uses-permission
+      android:name="android.permission.REQUEST_INSTALL_PACKAGES"
+      tools:ignore="RequestInstallPackagesPolicy" />
   <uses-permission
       android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
-      tools:ignore="ScopedStorage" />
+      tools:ignore="AllFilesAccessPolicy,ScopedStorage" />
   <uses-permission
       android:name="android.permission.QUERY_ALL_PACKAGES"
-      tools:ignore="QueryAllPackagesPermission" />
+      tools:ignore="PackageVisibilityPolicy,QueryAllPackagesPermission" />
 
   <application
       android:name=".ManagerApplication"
+      android:allowBackup="true"
+      android:dataExtractionRules="@xml/new_backup_rules"
+      android:fullBackupContent="@xml/old_backup_rules"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
       android:largeHeap="true"
