wip: add open plugins screen intent

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <action android:name="com.aliucord.manager.REINSTALL" />
+        <action android:name="com.aliucord.manager.OPEN_PLUGINS" />
 
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
