--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,23 @@
 [versions]
 accompanist = "0.37.3"
 agp = "8.13.0"
-androidx-activity = "1.10.1"
+androidx-activity = "1.11.0"
 androidx-core = "1.17.0"
-androidx-splashscreen = "1.0.1"
 androidx-lifecycle = "2.9.3"
+androidx-splashscreen = "1.0.1"
 apksig = "8.13.0"
 axml = "1.0.1"
 binary-resources = "2.0.1"
 bouncycastle = "1.81"
 coil = "3.3.0"
-compose = "1.9.0"
+compose = "1.9.1"
 compose-material3 = "1.3.2"
 compose-pipette = "1.0.1"
 desugaring = "2.1.5"
 diff = "4.16"
+hiddenApi-bypass = "6.1"
+hiddenApi-refine = "4.4.0"
+hiddenApi-stub = "4.4.0"
 koin = "4.1.1"
 kotlin = "2.2.10"
 kotlinx-immutable = "0.4.0"
@@ -22,6 +25,7 @@ kotlinx-serialization = "1.9.0"
 ktor = "3.2.3"
 microg = "0.3.6.244735"
 shimmer = "1.3.3"
+shizuku = "13.1.5"
 smali = "3.0.9"
 voyager = "1.1.0-beta03"
 zip = "2.3.1"
@@ -88,6 +92,13 @@ smali = { module = "com.android.tools.smali:smali", version.ref = "smali" }
 baksmali = { module = "com.android.tools.smali:smali-baksmali", version.ref = "smali" }
 zip = { module = "io.github.diamondminer88:zip-android", version.ref = "zip" }
 
+# Shizuku + Utils
+shizuku-api = { module = "dev.rikka.shizuku:api", version.ref = "shizuku" }
+shizuku-provider = { module = "dev.rikka.shizuku:provider", version.ref = "shizuku" }
+hiddenApi-bypass = { module = "org.lsposed.hiddenapibypass:hiddenapibypass", version.ref = "hiddenApi-bypass" }
+hiddenApi-refine = { module = "dev.rikka.tools.refine:runtime", version.ref = "hiddenApi-refine" }
+hiddenApi-stub = { module = "dev.rikka.hidden:stub", version.ref = "hiddenApi-stub" }
+
 # Other
 microg = { module = "org.microg.gms:play-services-safetynet", version.ref = "microg" }
 desugaring = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugaring" }
@@ -126,6 +137,10 @@ ktor = [
     "ktor-content-negotiation",
     "ktor-serialization-json",
 ]
+shizuku = [
+    "shizuku-api",
+    "shizuku-provider",
+]
 voyager = [
     "voyager-koin",
     "voyager-navigator",
@@ -138,3 +153,4 @@ compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+hiddenApi-refine = { id = "dev.rikka.tools.refine", version.ref = "hiddenApi-refine" }
