--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # Gradle
+org.gradle.configuration-cache=true
+org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8
 org.gradle.parallel=true
-org.gradle.caching=true
-org.gradle.configuration-cache=true
 
 # Kotlin
 kotlin.code.style=official
