--- a/.editorconfig
+++ b/.editorconfig
@@ -25,6 +25,8 @@ ij_java_keep_simple_methods_in_one_line = true
 ij_java_line_comment_add_space = true
 ij_java_line_comment_at_first_column = false
 ij_java_spaces_within_array_initializer_braces = true
+ij_kotlin_call_parameters_new_line_after_left_paren = false
+ij_kotlin_call_parameters_right_paren_on_new_line = false
 
 [*.kt]
 ij_kotlin_name_count_to_use_star_import = 3
